# knowledge_base

./: .gitignore  Makefile  config.py  docker-compose.yml  pyproject.toml
env/: .env.template
src/: chunking.py  crawler.py  main.py
src/adapters/: exceptions.py  google_search_adapter.py  http_adapter.py  pdf_adapter.py
src/repositories/: base_repository.py  exceptions.py  qdrant_repo.py
src/services/: saver_service.py
tests/unit_tests/test_custom_chunking/: test_fixed_sized.py
