[tool.poetry]
name = "knowledge-base"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
pypdf = "^6.12.2"
tiktoken = "^0.13.0"
pytest = "^9.0.3"
beautifulsoup4 = "^4.14.3"
aiohttp = "^3.14.0"
python-dotenv = "^1.2.2"
pydantic-settings = "^2.14.1"
loguru = "^0.7.3"
orjson = "^3.11.9"
validators = "^0.35.0"
trafilatura = "^2.0.0"
playwright = "^1.60.0"
qdrant-client = "^1.18.0"
ollama = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"